--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "email": "musthafasm@gmail.com"
       }
   ],
-  "require": {},
+  "require": {
+    "composer/installers": "^1.9"
+  },
   "require-dev": {
     "phpunit/phpunit": "^7.5",
     "szepeviktor/phpstan-wordpress": "^0.6.1",
